Fix: image alignment of blurb on homepage.

--- a/assets/src/css/pull-quote.css
+++ b/assets/src/css/pull-quote.css
@@ -5,7 +5,7 @@
     @apply py-4 lg:py-8 text-black dark:text-white rounded lg:rounded-lg text-center px-10 lg:px-28;
 
     .wp-block-column.is-vertically-aligned-center {
-        align-self: last baseline;
+        align-self: flex-start;
     }
 
     blockquote {
